import type { PColorPickerProps } from '../../src/runtime/components/color-picker.vue';
import theme from '#build/pohon/color-picker';
import { mountSuspended } from '@nuxt/test-utils/runtime';
import { describe, expect, it } from 'vitest';
import { axe } from 'vitest-axe';
import ColorPicker from '../../src/runtime/components/color-picker.vue';
import ComponentRender from '../component-render';

describe('colorPicker', () => {
  const sizes = Object.keys(theme.variants.size) as any;
  const formats = [
    ['hex', '#00C16A'],
    ['rgb', 'rgb(0, 193, 106)'],
    ['hsl', 'hsl(153, 100%, 37.8%)'],
    ['lab', 'lab(68.88% -60.41% 32.55%)'],
    ['cmyk', 'cmyk(100%, 0%, 45.08%, 24.31%)'],
  ];

  it.each([
    // Props
    ['with disabled', { props: { disabled: true } }],
    ...sizes.map((size: string) => [`with size ${size}`, { props: { size } }]),
    ...formats.map((format) => [`with format ${format[0]}`, { props: { format: format[0], defaultValue: format[1] } }]),
    ['with as', { props: { as: 'section' } }],
    ['with class', { props: { class: 'w-96' } }],
    ['with ui', { props: { pohon: { picker: 'gap-8' } } }],
  ])('renders %s correctly', async (nameOrHtml: string, options: { props?: PColorPickerProps }) => {
    const html = await ComponentRender(nameOrHtml, options, ColorPicker);
    expect(html).toMatchSnapshot();
  });

  it('passes accessibility tests', async () => {
    const wrapper = await mountSuspended(ColorPicker);

    expect(await axe(wrapper.element)).toHaveNoViolations();
  });

  describe('emits', () => {
    it('update:modelValue event', async () => {
      const wrapper = await mountSuspended(ColorPicker);
      await wrapper.setValue('#00C16A');

      expect(wrapper.emitted()).toMatchObject({ 'update:modelValue': [['#00C16A']] });
    });
  });
});
